bunch of js and css

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "Hawkes",
+        "Manawatu",
         "Northland",
+        "Taranaki",
         "Waikato"
     ]
 }
